# CG_Labs

./: .gitignore  CMakeLists.txt  Lab.sln  ДА-21_Зелінський_І.О._Лаб1_КомпГрафіка.docx
Lab/: Lab.vcxproj
Shaders/: FlatColor.frag  FlatColor.vert
Source/: Application.cpp  Application.h  Core.h  Main.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h
